<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oneface_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.VoteSignInActivity">

    <TextView
        android:id="@+id/sign_in_description_tv"
        style="@style/text_descrip_rosu_pe_negru"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/sign_in_top_text"


        android:textSize="17sp"
        android:layout_marginRight="8dp" />


    <EditText
        android:id="@+id/sign_in_firstName_et"
        style="@style/edit_text_sign_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sign_in_description_tv"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"

        android:background="@color/albSpalacit"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/griCacaniu"
        android:textCursorDrawable="@drawable/cursor_edited" />

    <EditText
        android:id="@+id/sign_in_lastName_et"
        style="@style/edit_text_sign_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_firstName_et"
        android:hint="@string/lastname"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/cursor_edited" />

    <EditText
        android:id="@+id/sign_in_email_et"
        style="@style/edit_text_sign_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_lastName_et"
        android:layout_marginTop="16dp"
        android:background="@color/albSpalacit"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/griCacaniu"
        android:textCursorDrawable="@drawable/cursor_edited" />

    <EditText
        android:id="@+id/sign_in_phone_et"
        style="@style/edit_text_sign_in"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sign_in_email_et"
        android:background="@color/albSpalacit"
        android:hint="@string/phone"

        android:inputType="textPhonetic"
        android:textColor="@color/griCacaniu"
        android:textCursorDrawable="@drawable/cursor_edited" />

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/mainButtons"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sign_in_phone_et"


        android:layout_marginRight="19dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton"
        android:imeOptions="actionNext"
        android:padding="5dp"

        android:text="@string/register" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:text="@string/sign_in_bottom_description"
        android:textColor="@color/albSpalacit" />

</RelativeLayout>
