<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexcrijman.stsapp10.activities.MainActivity">


    <Button
        android:id="@+id/btn_program"
        style="@style/mainButtons"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/public_vote_btn"


        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"


        android:background="@drawable/mybutton"
        android:text="@string/program" />

    <Button
        android:id="@+id/public_vote_btn"
        style="@style/mainButtons"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_despre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"

        android:background="@drawable/mybutton"
        android:text="@string/votul_publicului" />

    <Button
        android:id="@+id/btn_despre"
        style="@style/mainButtons"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLSigle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton"

        android:onClick="openDespreActivity"
        android:text="@string/despre" />

    <LinearLayout
        android:id="@+id/linearLSigle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="100"

        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"


            >

            <Button
                android:id="@+id/btn_to_SiSC_site"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/sisc_logo_selector"


                android:clickable="true"
                android:text="" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <Button
                android:id="@+id/btn_to_STS_site"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/sts_logo_selector"
                android:clickable="true"
                android:text="" />


        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
